parser/src/test/resources/corpus/valid/31_post_with_narrative.ff
rule "Post With Narrative" {
  post fee to ledger account "Mgmt Fee" with narrative "Daily accrual"
}
