parser/src/test/resources/corpus/invalid/31_post_with_missing_narrative.ff
rule "Post With Missing Narrative Keyword" {
  post fee to ledger account "Mgmt Fee" with "Daily accrual"
}
